	Fixed slapd group ACL locking bug (ITS#3173)
	Fixed slapi slapi_int_compute_output_ber attrs bug
	Fixed libldap sasl_encode 64-bit bug (ITS#3054,3212)
	Fixed libldap matchedValues parsing bug (ITS#3208,3216)
	Fixed libldap_r runqueue bug
	Build environments
		Added additional res_query detection for MacOS X
		Added default ldapi:// SSF build setting

OpenLDAP 2.2.14 Release
	Fixed back-bdb ignore deadlock bug (ITS#3188)
	Fixed back-bdb pagedResults no end cookie bug (ITS#3161)
	Fixed back-bdb pagedResults clear controls bug (ITS#3182)
	Fixed back-bdb pagedResults ignore control bug
	Fixed back-hdb empty suffix bugs (ITS#3063,3186)
	Fixed back-meta freeit bug (ITS#3190)
	Fixed slapi prototypes bug (ITS#3166)
	Fixed slapi internal search limit bugs (ITS#3183)
	Added slapd -l USER/DAEMON options (ITS#3187)
	Build environments
		Fixed back-sql trace builds
	Documentation
		Fixed slapd.access(5) dn.regex $$ bug

OpenLDAP 2.2.13 Release
	Fixed pcache CSN pending segfault (ITS#3180)
	Added libldap cert check extension (ITS#3134)

OpenLDAP 2.2.12 Release
	Fixed slapd empty DN uniqueMember normalization
	Fixed slapd empty DN in proxyAuthx control
	Fixed slapd parsing of auth{cz} "dn:<pat>" rules
	Fixed slapd first component bug (ITS#3118)
	Fixed slapd TOLOWER macro use bug (ITS#3115)
	Fixed slapd TLS context clash bug (ITS#3109)
	Fixed slapd ACL set recursion (ITS#3140)
	Fixed slapd entry2mods normalization bug (ITS#3144,3152)
	Fixed slapd extended match memory leak (ITS#3146)
	Fixed slapd syncrepl persist interval issue (ITS#3064)
	Fixed slapd abandon/cancel pending bug (ITS#3160)
	Fixed slapd sl_malloc memory leak (ITS#3155)
	Fixed back-ldap normalization bug 
	Fixed pcache cache_entries init bug (ITS#3150)
	Fixed pcache consistency_check bug (ITS#3151)
	Fixed pcache erroneous reply (ITS#3153)
	Fixed pcache remove_query_data bug (ITS#3170)
	Fixed libldap SASL mutex init bug (ITS#3123)
	Fixed libldap SASL buffering bug (ITS#3139)